--- a/public/styles.css
+++ b/public/styles.css
@@ -16,7 +16,7 @@ h1 {
 .question {
   margin-bottom: 20px;
   font-family: 'Raleway', sans-serif;
-  text-align: center;;
+  text-align: left-center;
 }
 label {
   display: block;
